tests/errors/preprocessor/after_include_must_be_quote.c
#include dont_elif.c"

int main ()
{
	return 0;
}
